Big screen spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -1016,3 +1016,11 @@ hr {
   }
 
 }
+
+@media screen and (min-width: 1800px) {
+
+  .contact-container {
+    margin: 8rem auto
+  }
+  
+}
